k8s/chroma-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: chroma-db
  name: chroma-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: chroma-db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.35.0 (HEAD)
      labels:
        io.kompose.service: chroma-db
    spec:
      containers:
        - env:
            - name: CHROMA_PERSIST_DIRECTORY
              value: "/data"
            - name: CHROMA_COLLECTION_NAME
              value: "financial_reports"
            - name: EMBEDDING_MODEL
              value: "all-MiniLM-L6-v2"
          image: ghcr.io/chroma-core/chroma:latest
          name: chroma-db
          ports:
            - containerPort: 8000
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: chroma-storage
      volumes:
        - name: chroma-storage
          persistentVolumeClaim:
            claimName: chroma-pvc
