k8s/ollama-container-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose.yml
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: ollama-container
  name: ollama-container
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ollama-container
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f compose.yml
        kompose.version: 1.35.0 (HEAD)
      labels:
        io.kompose.service: ollama-container
    spec:
      containers:
        - command:
            - /usr/bin/bash
            - /entrypoint.sh
          image: quay.io/rh-ee-petdavis/finance-agent-ollama-container
          livenessProbe:
            exec:
              command:
                - curl
                - -f
                - http://localhost:11434
            failureThreshold: 5
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 10
          name: ollama-container
          ports:
            - containerPort: 11434
              protocol: TCP
          volumeMounts:
            - mountPath: /entrypoint.sh
              name: ollama-container-cm0
              subPath: entrypoint.sh
            # - name: secret-volume
            #   mountPath: /etc/secret-volume
            #   readOnly: true
      restartPolicy: Always
      volumes:
        # - name: secret-volume
        #   secret:
        #     secretName: streamlit-secret
        - configMap:
            items:
              - key: entrypoint.sh
                path: entrypoint.sh
            name: ollama-container-cm0
          name: ollama-container-cm0
