k8s/streamlit-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: streamlit-app
  name: streamlit-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: streamlit-app
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.35.0 (HEAD)
      labels:
        io.kompose.service: streamlit-app
    spec:
      serviceAccountName: streamlit-app-secrets
      containers:
        - envFrom:
            - secretRef:
              name: streamlit-secret
          image: quay.io/oawofolurh/llm-agent-finance-streamlit-app:latest
          imagePullPolicy: Always
          name: streamlit-app
          ports:
            - containerPort: 8501
              protocol: TCP
          volumeMounts:
            - name: secret-volume
              mountPath: /etc/secret-volume
              readOnly: true
      volumes:
        - name: secret-volume
          secret:
            secretName: streamlit-secret
      restartPolicy: Always
