k8s/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: streamlit-route
  namespace: rag-finance-demo
  uid: 7f3cee01-812e-4b3d-b528-1b582a3e98ea
  resourceVersion: '310164'
  creationTimestamp: '2025-04-09T12:21:04Z'
  annotations:
    openshift.io/host.generated: 'true'
  managedFields:
    - manager: Mozilla
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2025-04-09T12:21:04Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:spec':
          'f:path': {}
          'f:port':
            .: {}
            'f:targetPort': {}
          'f:to':
            'f:kind': {}
            'f:name': {}
            'f:weight': {}
          'f:wildcardPolicy': {}
    - manager: openshift-router
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2025-04-09T12:21:04Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:status':
          'f:ingress': {}
      subresource: status
spec:
  host: streamlit-route-rag-finance-demo.apps.cluster-6dff9.6dff9.sandbox2295.opentlc.com
  path: /
  to:
    kind: Service
    name: streamlit-app
    weight: 100
  port:
    targetPort: '8501'
  wildcardPolicy: None
status:
  ingress:
    - host: streamlit-route-rag-finance-demo.apps.cluster-6dff9.6dff9.sandbox2295.opentlc.com
      routerName: default
      conditions:
        - type: Admitted
          status: 'True'
          lastTransitionTime: '2025-04-09T12:21:04Z'
      wildcardPolicy: None
      routerCanonicalHostname: router-default.apps.cluster-6dff9.6dff9.sandbox2295.opentlc.com
